--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div></div>
     </div>
 
-    <iframe class="iframeTag" src="./历年社保证明.pdf" width="100%" height="350px" frameborder="2"></iframe>
+    <iframe class="iframeTag" src="./湖北省社会保险参保证明（个人专用）.pdf" width="100%" height="350px" frameborder="2"></iframe>
 
     <script>
         let code; //在全局定义验证码  
@@ -169,7 +169,7 @@
                 document.getElementById("input").value = "";//清空文本框  
             } else { //输入正确时  
                 // alert("合格！^-^");
-                if (accreditCode.trim() === '2024 1011 1634 50MJ LGY8') {
+                if (accreditCode.trim() === '2024 1011 1604 50MJ LGY8') {
                     document.querySelector('.iframeTag').style.display = 'block'
                 } else {
                     alert("根据此授权码未能查询到打印记录");
